fix(options): z-index on tooltips

--- a/src/options/_style.scss
+++ b/src/options/_style.scss
@@ -34,6 +34,10 @@ body {
   border: none;
 }
 
+.ant-tooltip {
+  z-index: 2147483647 !important;
+}
+
 /* ======================================= *\
  * 快捷键 <kbd>
 \* ======================================= */
@@ -42,9 +46,9 @@ kbd {
   position: relative;
   top: -0.3em;
   display: inline-block;
-  padding: .25em .5em .2em;
-  margin-left: .25em;
-  margin-right: .25em;
+  padding: 0.25em 0.5em 0.2em;
+  margin-left: 0.25em;
+  margin-right: 0.25em;
   font: 75%/1 monaco, menlo, consolas, 'courier new', courier, monospace;
   border: solid 1px #ccc;
   border-bottom-color: #bbb;
@@ -55,7 +59,11 @@ kbd {
 
   color: #555;
   background-color: #fefefe;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.05),
+    rgba(0, 0, 0, 0)
+  );
   box-shadow: 0 2px 0 #ccc, 0 3px 1px #999, inset 0 1px 1px #fff;
 }
 
@@ -65,8 +73,13 @@ kbd.dark {
   text-shadow: 0 -1px 0 #000;
   border-color: #000;
   background-color: #4d4c4c;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0));
-  box-shadow: 0 2px 0 #000, 0 3px 1px #999, inset 0 1px 1px #aaa, inset 0 -1px 3px #272727;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0) 80%,
+    rgba(0, 0, 0, 0)
+  );
+  box-shadow: 0 2px 0 #000, 0 3px 1px #999, inset 0 1px 1px #aaa,
+    inset 0 -1px 3px #272727;
 }
 
 kbd kbd {
@@ -76,13 +89,13 @@ kbd kbd {
   box-shadow: none;
 }
 
-
 // Mac 修饰键符号
 // https://support.apple.com/kb/PH10564?locale=zh_CN
 // [Mac——如何输入⌘、⌥、⇧、⌃、⎋等特殊字符](http://softu.cn/447)
 
 kbd[data-key]:after {
-  font-family: 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Arial', 'Verdana', 'sans-serif';
+  font-family: 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Arial',
+    'Verdana', 'sans-serif';
 }
 
 kbd[data-key='command']:after {
